tdf#95783: Don't calculate width of text with glyph fallback as way too wide

The old code in MultiSalLayout::GetTextBreak() only makes sense if the
base level character width is zero where a fallback level has a
non-zero character width, and vice versa. But this is not the case for
Windows, at least not any more now when using UniscribeLayout and not
SimpleWinLayout.

This simple change fixes that: Only use the width from a fallback
level if the width at the base level is zero. Hopefully it does not
cause regressions for other documents or on other platforms. (But, I
repeat, I find it hard to believe that the intent of the code could
really have been to ever add two or more non-zero widths for the same
character from different levels of fallback and use that.)

Change-Id: Ic66c55db4b7463f9e04fcedec76f1c44f5e62e03